--- a/index.html
+++ b/index.html
@@ -205,10 +205,10 @@
         <footer id="footer">
 
             <div>
-                <i class="i fab fa-twitter"></i> 
-                <i class="i fab fa-facebook"></i> 
-                <i class="i fab fa-instagram"></i>
-                <i class="i fas fa-envelope"></i>
+                <i class="i fab fa-twitter fa-2x"></i> 
+                <i class="i fab fa-facebook fa-2x"></i> 
+                <i class="i fab fa-instagram fa-2x"></i>
+                <i class="i fas fa-envelope fa-2x"></i>
             </div>
 
             <p>© Copyright 2020 Edgar</p>
